--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie App</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
       <form id="form">
-        <input
-          type="text"
-          id="search"
-          placeholder="Search Movie"
-          class="search"
-        />
+        <input type="text" id="search" placeholder="Search" class="search" />
       </form>
     </header>
     <main id="main"></main>
